adding more info to page1

--- a/page1.html
+++ b/page1.html
@@ -1,8 +1,8 @@
 <html>
  <head>
-  <title>title</title>
+  <title>Page1</title>
  </head>
  <body>
-	My name is Arvind.
+	My name is Arvind Sharma and my age is 22.
  </body>
 </html>
